// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToDoSlice test addToDoList tests should fail 1`] = `
{
  "actions": [
    {
      "meta": {
        "arg": "item 1",
        "requestId": Any<String>,
        "requestStatus": "pending",
      },
      "payload": undefined,
      "type": "@todo/add/pending",
    },
    {
      "error": {
        "message": "Error get todo list.",
        "name": "Error",
        "stack": Any<String>,
      },
      "meta": {
        "aborted": false,
        "arg": "item 1",
        "condition": false,
        "rejectedWithValue": false,
        "requestId": Any<String>,
        "requestStatus": "rejected",
      },
      "payload": undefined,
      "type": "@todo/add/rejected",
    },
  ],
}
`;

exports[`ToDoSlice test addToDoList tests should success 1`] = `
{
  "actions": [
    {
      "meta": {
        "arg": "item 1",
        "requestId": Any<String>,
        "requestStatus": "pending",
      },
      "payload": undefined,
      "type": "@todo/add/pending",
    },
    {
      "meta": {
        "arg": "item 1",
        "requestId": Any<String>,
        "requestStatus": "fulfilled",
      },
      "payload": {
        "id": 100,
        "isFinish": false,
        "title": "item 1",
      },
      "type": "@todo/add/fulfilled",
    },
  ],
}
`;

exports[`ToDoSlice test editToDoItem tests should fail 1`] = `
{
  "actions": [
    {
      "meta": {
        "arg": {
          "id": 100,
          "title": "a",
        },
        "requestId": Any<String>,
        "requestStatus": "pending",
      },
      "payload": undefined,
      "type": "@todo/edit/pending",
    },
    {
      "error": {
        "message": "Error get todo list.",
        "name": "Error",
        "stack": Any<String>,
      },
      "meta": {
        "aborted": false,
        "arg": {
          "id": 100,
          "title": "a",
        },
        "condition": false,
        "rejectedWithValue": false,
        "requestId": Any<String>,
        "requestStatus": "rejected",
      },
      "payload": undefined,
      "type": "@todo/edit/rejected",
    },
  ],
}
`;

exports[`ToDoSlice test editToDoItem tests should success 1`] = `
{
  "actions": [
    {
      "meta": {
        "arg": {
          "id": 100,
          "title": "a",
        },
        "requestId": Any<String>,
        "requestStatus": "pending",
      },
      "payload": undefined,
      "type": "@todo/edit/pending",
    },
    {
      "payload": "edit",
      "type": "ToDo_List_Popup/closePopup",
    },
    {
      "payload": null,
      "type": "ToDo_List/setCurrent",
    },
    {
      "meta": {
        "arg": {
          "id": 100,
          "title": "a",
        },
        "requestId": Any<String>,
        "requestStatus": "fulfilled",
      },
      "payload": {
        "id": 100,
        "title": "a",
      },
      "type": "@todo/edit/fulfilled",
    },
  ],
}
`;

exports[`ToDoSlice test loadToDoList tests should fail 1`] = `
{
  "actions": [
    {
      "meta": {
        "arg": undefined,
        "requestId": Any<String>,
        "requestStatus": "pending",
      },
      "payload": undefined,
      "type": "@todo/list/load/pending",
    },
    {
      "error": {
        "message": "Error get todo list.",
        "name": "Error",
        "stack": Any<String>,
      },
      "meta": {
        "aborted": false,
        "arg": undefined,
        "condition": false,
        "rejectedWithValue": false,
        "requestId": Any<String>,
        "requestStatus": "rejected",
      },
      "payload": undefined,
      "type": "@todo/list/load/rejected",
    },
  ],
}
`;
